# srtgram

./: Cargo.toml  README.md
src/: analyzer.rs  html_generator.rs  main.rs  metadata_generator.rs  parser.rs  youtube_downloader.rs
