[package]
name = "srtgram"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
pulldown-cmark = "0.13.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }
